fixing frontend
