# server/swagger.js
@@ -1,65 +1,61 @@
-const swaggerAutogen = require('swagger-autogen')()
-
+const swaggerAutogen = require("swagger-autogen")();
 
 const doc = {
-    info: {
-        version: "1.0.0",
-        title: "Permata-test-Todo",
-        description: "Documentation automatically generated by the <b>swagger-autogen</b> module."
-    },
-    host: "localhost:5000",
-    basePath: "/api/v1",
-    schemes: ['http', 'https'],
-    consumes: ['application/json'],
-    produces: ['application/json'],
-    tags: [
-        {
-            "name": "User",
-            "description": "Endpoints"
-        }
-    ],
-    securityDefinitions: {
-        apiKeyAuth:{
-            type: "apiKey",
-            in: "header",       // can be "header", "query" or "cookie"
-            name: "X-API-KEY",  // name of the header, query parameter or cookie
-            description: "any description..."
-        }
-    },
-    definitions: {
-        Parents: {
-            father: "Simon Doe",
-            mother: "Marie Doe"
-        },
-        User: {
-            name: "Jhon Doe",
-            age: 29,
-            parents: {
-                $ref: '#/definitions/Parents'
-            },
-            diplomas: [
-                {
-                    school: "XYZ University",
-                    year: 2020,
-                    completed: true,
-                    internship: {
-                        hours: 290,
-                        location: "XYZ Company"
-                    }
-                }
-            ]
-        },
-        AddUser: {
-            $name: "Jhon Doe",
-            $age: 29,
-            about: ""
-        }
-    }
-}
+  info: {
+    version: "1.0.0",
+    title: "Permata-test-Todo",
+    description:
+      "Documentation automatically generated by the <b>swagger-autogen</b> module.",
+  },
+  host: "localhost:5000",
+  basePath: "/api/v1",
+  schemes: ["http", "https"],
+  consumes: ["application/json"],
+  produces: ["application/json"],
 
-const outputFile = './swagger-output.json'
-const endpointsFiles = ['../server/src/routes/index.js']
+  securityDefinitions: {
+    bearerAuth: {
+      type: "apiKey",
+      name: "Authorization",
+      in: "header",
+      description: "Bearer token authorization",
+    },
+  },
+  
+  definitions: {
+    Parents: {
+      father: "Simon Doe",
+      mother: "Marie Doe",
+    },
+    User: {
+      name: "Jhon Doe",
+      age: 29,
+      parents: {
+        $ref: "#/definitions/Parents",
+      },
+      diplomas: [
+        {
+          school: "XYZ University",
+          year: 2020,
+          completed: true,
+          internship: {
+            hours: 290,
+            location: "XYZ Company",
+          },
+        },
+      ],
+    },
+    AddUser: {
+      $name: "Jhon Doe",
+      $age: 29,
+      about: "",
+    },
+  },
+};
+
+const outputFile = "./swagger-output.json";
+const endpointsFiles = ["../server/src/routes/index.js"];
 
 swaggerAutogen(outputFile, endpointsFiles, doc).then(() => {
-    require('../../permata-test/server/index')           // Your project's root file
-})
+  require("../../permata-test/server/index"); // Your project's root file
+});
